# GreedGrid

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
scripts/: make_icon.py
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-tray-icons.py  icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  paths.rs  pty.rs  sysmon.rs
src-tauri/src/commands/: fs.rs  mod.rs  pty.rs  sysmon.rs  tray.rs  web.rs  workspace.rs
src/components/: ConfirmDialog.test.tsx  ConfirmDialog.tsx  IdleIcon.test.tsx  IdleIcon.tsx  MergeConflictDialog.tsx  Toolbar.test.tsx  Toolbar.tsx  WorkspaceMenu.tsx
src/grid/: GridCell.test.tsx  GridCell.tsx  GridHost.test.tsx  GridHost.tsx  MaximizeButton.test.tsx  MaximizeButton.tsx  Splitter.test.tsx  Splitter.tsx  cellId.ts  dropHitTest.test.ts  dropHitTest.ts  maximize.test.ts  maximize.ts  merge.test.ts  merge.ts  presets.test.ts  presets.ts  remap.test.ts  remap.ts  resize.test.ts  resize.ts  trackPx.test.ts  trackPx.ts  useElementSize.ts  useFileDrop.test.ts  useFileDrop.ts
src/lib/: ipc.test.ts  ipc.ts  types.ts
src/panels/: ConfigModal.test.tsx  ConfigModal.tsx  DropMenu.test.tsx  DropMenu.tsx  Palette.test.tsx  Palette.tsx  PanelPicker.test.tsx  PanelPicker.tsx  dnd.test.ts  dnd.ts  index.test.ts  index.ts  lifecycle.test.ts  lifecycle.ts  panelUiStore.test.ts  panelUiStore.ts  registry.test.ts  registry.ts  types.ts
src/store/: idleStore.test.ts  idleStore.ts  layoutStore.test.ts  (+3 more)
(+46 files in other folders)
