[package]
name = "greedgrid"
version = "1.1.0"
description = "GreedGrid — a screen-splitting monitoring dashboard"
authors = ["Rafael"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "greedgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
portable-pty = "0.9"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Web panel renders external sites in raw wry webviews positioned over grid cells
# via a gtk::Fixed overlay — Tauri's high-level multi-webview can't position
# child webviews on WebKitGTK (it packs them into a GtkBox and splits the window).
[target.'cfg(target_os = "linux")'.dependencies]
wry = "0.55"
gtk = "0.18"

